[gd_scene load_steps=10 format=3 uid="uid://bo4bry6hr77lc"]

[ext_resource type="Theme" uid="uid://dr7cctdf03t7a" path="res://assets/scenes/gui/theme_gui.theme" id="1_67qff"]
[ext_resource type="Script" path="res://scripts/GUI.gd" id="1_j2dq0"]
[ext_resource type="Texture2D" uid="uid://d1e1i7fsyke2s" path="res://assets/textures/uvas.png" id="2_2h13e"]
[ext_resource type="Texture2D" uid="uid://crchyamgooxco" path="res://assets/textures/heart_full.png" id="3_ef16f"]
[ext_resource type="FontFile" uid="uid://tlhpf4teewt6" path="res://assets/scenes/gui/PixeloidMono.otf" id="3_qr3iq"]
[ext_resource type="Theme" uid="uid://exqkmve4kjmx" path="res://assets/scenes/gui/GUI.tres" id="6_ae7o3"]
[ext_resource type="Texture2D" uid="uid://gvcmms7gptid" path="res://assets/textures/introcircle.png" id="6_x1dwk"]

[sub_resource type="FontVariation" id="FontVariation_2xgm5"]
base_font = ExtResource("3_qr3iq")
variation_embolden = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_b2qy7"]
font = SubResource("FontVariation_2xgm5")

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_j2dq0")

[node name="ContainerTime" type="HBoxContainer" parent="."]
offset_left = 192.0
offset_top = 12.0
offset_right = 307.0
offset_bottom = 32.0

[node name="Timer" type="Timer" parent="ContainerTime"]
autostart = true

[node name="TimeP" type="Label" parent="ContainerTime"]
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_b2qy7")

[node name="ContainerScore" type="HBoxContainer" parent="."]
offset_left = 296.0
offset_top = 2.0
offset_right = 411.0
offset_bottom = 25.0
scale = Vector2(1.6, 1.6)
theme = ExtResource("6_ae7o3")

[node name="Score" type="Label" parent="ContainerScore"]
layout_mode = 2
text = "Puntos: "

[node name="ScoreP" type="Label" parent="ContainerScore"]
layout_mode = 2
text = "00000"

[node name="ContainerLife" type="HBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 107.0
offset_bottom = 24.0
scale = Vector2(1.2, 1.2)

[node name="Heart0" type="TextureRect" parent="ContainerLife"]
layout_mode = 2
texture = ExtResource("3_ef16f")

[node name="Heart1" type="TextureRect" parent="ContainerLife"]
layout_mode = 2
texture = ExtResource("3_ef16f")

[node name="Heart2" type="TextureRect" parent="ContainerLife"]
layout_mode = 2
texture = ExtResource("3_ef16f")

[node name="ContainerFruit" type="HBoxContainer" parent="."]
offset_left = -100.0
offset_top = 32.0
offset_right = -1.0
offset_bottom = 58.0
scale = Vector2(0.9, 0.9)
theme = ExtResource("1_67qff")

[node name="TextureRect" type="TextureRect" parent="ContainerFruit"]
layout_mode = 2
texture = ExtResource("2_2h13e")
expand_mode = 3
stretch_mode = 4

[node name="Label" type="Label" parent="ContainerFruit"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "00000"

[node name="PartidaGanada" type="ColorRect" parent="."]
process_mode = 3
offset_right = 426.0
offset_bottom = 242.0
theme = ExtResource("6_ae7o3")
color = Color(0.27451, 0.407843, 1, 0.454902)

[node name="Label" type="Label" parent="PartidaGanada"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.0
offset_top = 45.0
offset_right = 55.0
offset_bottom = 68.0
grow_horizontal = 2
scale = Vector2(1.2, 1.2)
text = "HAS PASADO EL INVIERNO!"

[node name="Ranking" type="VBoxContainer" parent="PartidaGanada"]
layout_mode = 0
offset_left = 5.0
offset_top = 98.0
offset_right = 129.0
offset_bottom = 174.0

[node name="Label" type="Label" parent="PartidaGanada/Ranking"]
layout_mode = 2
text = "Ranking"
horizontal_alignment = 1

[node name="ListaJugadores" type="VBoxContainer" parent="PartidaGanada/Ranking"]
layout_mode = 2
theme = ExtResource("6_ae7o3")
alignment = 1

[node name="VBoxContainerW" type="VBoxContainer" parent="PartidaGanada"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -38.0
offset_right = 86.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Label" type="Label" parent="PartidaGanada/VBoxContainerW"]
layout_mode = 2
text = "Escribe tu nombre:"

[node name="TextEdit" type="LineEdit" parent="PartidaGanada/VBoxContainerW"]
layout_mode = 2
alignment = 1
max_length = 5

[node name="SaveName" type="Button" parent="PartidaGanada/VBoxContainerW"]
layout_mode = 2
text = "Guardar"

[node name="VBoxContainerW2" type="VBoxContainer" parent="PartidaGanada"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -65.0
offset_right = 85.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.8)

[node name="Restart" type="Button" parent="PartidaGanada/VBoxContainerW2"]
layout_mode = 2
size_flags_vertical = 3
text = "Volver a jugar"

[node name="Exit" type="Button" parent="PartidaGanada/VBoxContainerW2"]
layout_mode = 2
size_flags_vertical = 3
text = "Salir al menu principal"

[node name="GameOver" type="ColorRect" parent="."]
process_mode = 3
offset_right = 426.0
offset_bottom = 240.0
theme = ExtResource("1_67qff")
color = Color(1, 0, 0, 0.309804)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -60.0
offset_right = -214.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme = ExtResource("1_67qff")
alignment = 1

[node name="Label" type="Label" parent="GameOver/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_67qff")
text = "YOU DIED"

[node name="VBoxContainer3" type="VBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = 12.0
offset_right = 86.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Label" type="Label" parent="GameOver/VBoxContainer3"]
layout_mode = 2
text = "Escribe tu nombre:"

[node name="TextEdit" type="LineEdit" parent="GameOver/VBoxContainer3"]
layout_mode = 2
alignment = 1
max_length = 5

[node name="SaveName" type="Button" parent="GameOver/VBoxContainer3"]
layout_mode = 2
text = "Guardar"

[node name="VBoxContainer2" type="VBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -53.0
offset_right = 81.0
offset_bottom = -8.99998
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.9, 0.9)
theme = ExtResource("1_67qff")

[node name="Restart" type="Button" parent="GameOver/VBoxContainer2"]
layout_mode = 2
text = "Volver a jugar"

[node name="Exit" type="Button" parent="GameOver/VBoxContainer2"]
layout_mode = 2
text = "Salir"

[node name="VBoxContainer4" type="VBoxContainer" parent="GameOver"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ranking" type="VBoxContainer" parent="GameOver"]
layout_mode = 0
offset_left = 5.0
offset_top = 101.0
offset_right = 129.0
offset_bottom = 177.0

[node name="Label" type="Label" parent="GameOver/Ranking"]
layout_mode = 2
text = "Ranking"
horizontal_alignment = 1

[node name="ListaJugadores" type="VBoxContainer" parent="GameOver/Ranking"]
layout_mode = 2
theme = ExtResource("6_ae7o3")
alignment = 1

[node name="IntroCircle" type="TextureRect" parent="."]
offset_left = -43.0
offset_top = -137.0
offset_right = 469.0
offset_bottom = 375.0
pivot_offset = Vector2(256, 256)
texture = ExtResource("6_x1dwk")

[connection signal="timeout" from="ContainerTime/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="PartidaGanada/VBoxContainerW/SaveName" to="." method="_on_save_name_pressed"]
[connection signal="pressed" from="PartidaGanada/VBoxContainerW2/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PartidaGanada/VBoxContainerW2/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer3/SaveName" to="." method="_on_save_name_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer2/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer2/Exit" to="." method="_on_exit_pressed"]
